--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1691.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datetime-picker": "^6.0.1",
@@ -17,6 +18,7 @@
     "react-model": "^4.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
