--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1691.0",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
