--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.6.6",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datetime-picker": "^6.0.1",
