--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,9 @@
+PORT=5000
 AWS_ACCESS_KEY_ID=AKIAYM7POI7ZNSIBSMPU
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=ap-southeast-1
 DYNAMODB_TABLE_LAYOUTS=Layouts
 DYNAMODB_TABLE_GRIDITEMS=GridItems
+DYNAMODB_TABLE_SCHEDULEDADS=ScheduledAds
+DYNAMODB_TABLE_ADS=Ads
 S3_BUCKET_NAME=public-ads
