--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,7 @@ DYNAMODB_TABLE_LAYOUTS=Layouts
 DYNAMODB_TABLE_GRIDITEMS=GridItems
 DYNAMODB_TABLE_SCHEDULEDADS=ScheduledAds
 DYNAMODB_TABLE_ADS=Ads
+DYNAMODB_TABLE_LOCATIONS=Locations
+DYNAMODB_TABLE_TVS=TVs
+DYNAMODB_TABLE_TVLAYOUTS=TVLayouts
 S3_BUCKET_NAME=public-ads
