--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.0",
+    "toastify": "^2.0.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
