--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.6.7",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.453.0",
-    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datetime-picker": "^6.0.1",
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
+    "react-tooltip": "^5.28.0",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
