--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14"
-  }
+  },
+  "description": "- Yeo Jin Rong\r - An Yong Shyan\r - Ng Kai Huat Jason\r - Liang Ding Xuan\r - Tan Guo Zhi Kelvin",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
