--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.679.0",
+    "@aws-sdk/client-dynamodb-streams": "^3.686.0",
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
