--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
+    "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
