--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.28.0",
-    "socket.io-client": "^4.8.0",
+    "socket.io-client": "^4.8.1",
     "uuid": "^10.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
