--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.28.0",
+    "react-use-websocket": "^4.10.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
