--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,13 @@
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
