--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "lodash.debounce": "^4.0.8",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
