--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "socket.io-client": "^4.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
+    "webgazer": "^3.3.0",
     "ws": "^8.18.0"
   },
   "scripts": {
