--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,9 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "aws-sdk-client-mock": "^4.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
