--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +18,15 @@
     "@aws-sdk/lib-dynamodb": "^3.687.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
     "aws-sdk": "^2.1692.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
+    "npm": "^10.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
