--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io-client": "^4.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
+    "webfontloader": "^1.6.28",
     "ws": "^8.18.0"
   },
   "scripts": {
