--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hamburger-react": "^2.5.1",
     "iodash": "^0.0.1-security",
     "lucide-react": "^0.453.0",
+    "motion": "^11.17.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-datetime-picker": "^6.0.1",
