--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +39,7 @@
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28",
+    "webgazer": "^3.3.0",
     "ws": "^8.18.0"
   },
   "scripts": {
