--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "iodash": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "motion": "^11.17.0",
     "react": "^18.3.1",
