--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "npm": "^10.9.0",
     "socket.io": "^4.8.1",
