--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-model": "^4.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.28.0",
     "react-use-websocket": "^4.10.1",
