--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-heatmap-component": "^0.1.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
