--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
+    "framer-motion": "^12.0.6",
     "gazer": "^1.0.0",
     "hamburger-react": "^2.5.1",
     "heatmap.js": "^2.0.5",
