--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-amplify": "^6.6.7",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "d3": "^7.9.0",
     "gazer": "^1.0.0",
     "hamburger-react": "^2.5.1",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.453.0",
     "motion": "^11.17.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-datetime-picker": "^6.0.1",
     "react-dnd": "^16.0.1",
