--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,8 @@
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "framer-motion": "^12.0.6",
     "gazer": "^1.0.0",
@@ -45,6 +48,8 @@
     "react-tooltip": "^5.28.0",
     "react-use-websocket": "^4.10.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28",
